--- a/index.html
+++ b/index.html
@@ -13,105 +13,126 @@
     <title>Portafolio de Edwyn</title>
 </head>
 <header>
-    <div class="header-container">
-        <i class="icon-menu"></i>
-        <img src="./images/logo_edwyn.png" alt="">
+    <div class="wrapper">
+        <div class="header-container">
+            <i class="icon-menu"></i>
+            <img src="./images/logo_edwyn.png" alt="">
+        </div>
+        <div class="header-menu">
+            <a href="">Hola</a>
+            <a href="">Proyectos</a>
+            <a href="">Testimonios</a>
+            <a href="">Contacto</a>
+        </div>
+        <button class="btn btn-primary">Currículum</button>
     </div>
-    <button class="btn btn-primary">Currículum</button>
 </header>
 
 <body>
     <div class="main">
         <div class="wrapper">
             <div class="main-avatar">
-                <img src="./images/person.png" alt="">
+                <img class="avatar" src="./images/person.png" alt="">
+                <img class="avatar2" src="./images/person-3x.png" alt="">
+            </div>
+            <div class="main-title">
+                <h1>
+                    ¡Hola a todos!
+                    Soy Edwyn Cortez
+                </h1>
             </div>
 
-            <h1>
-                ¡Hola a todos!
-                Soy Edwyn Cortez
-            </h1>
             <p>Devloper que le encanta implementar diseños que inspiran y atraen a las personas.</p>
             <div class="main-container">
-                <i class="icon-github"></i>
-                <h5>Implementaciones de la más alta calidad.</h5>
-                <i class="icon-figma"></i>
-                <h5>Diseños pixel perfect creados en la mejor herramienta de diseño..</h5>
-                <i class="icon-react"></i>
-                <h5>React desde 0, sin dependencias y usando
-                    solo el lenguaje JavaScript.</h5>
+                <div class="main-container-element">
+                    <i class="icon-github"></i>
+                    <h5>Implementaciones de la más alta calidad.</h5>
+                </div>
+                <div class="main-container-element">
+                    <i class="icon-figma"></i>
+                    <h5>Diseños pixel perfect creados en la mejor herramienta de diseño..</h5>
+                </div>
+                <div class="main-container-element">
+                    <i class="icon-react"></i>
+                    <h5>React desde 0, sin dependencias y usando
+                        solo el lenguaje JavaScript.</h5>
+                </div>
+
+
+
             </div>
         </div>
 
     </div>
-    <div class="proyects">
-        <div class="wrapper">
-            <div class="proyects-container">
-                <h4>Proyectos</h4>
-                <div class="proyects-menu">
-                    <a href="#niko" class="btn btn-secondary">Niko</a>
-                    <a href="#marvol" class="btn btn-transparent">Marvol</a>
-                    <a href="#spotifu" class="btn btn-transparent">Spotifu</a>
-                </div>
-                <div class="proyects-niko wrapper" id="niko">
-                    <div class="niko-img">
-                        <img src="./images/img-1.png" alt="Proyecto Niko" title="Proyecto Niko">
-                    </div>
-                    <div class="niko-content">
-                        <h4>NIKO</h4>
-                        <p>Niko es una de las marcas y proveedores de equipamiento deportivo más reconocidas y valiosas
-                            en todo el mundo.
-                            Por ello este proyecto es dedicado a crear la interfaz de la pagina oficial de Niko, donde
-                            tenemos uno de los calzados
-                            más...</p>
-                        <button class="btn btn-secondary">
-                            Ver Código
-                        </button>
 
-                        <button class="btn btn-primary">
-                            Ver Proyecto
-                        </button>
-                    </div>
-                    <div class="niko-content-primary"></div>
+    <div class="projects">
 
-                </div>
-                <div class="proyects-marvol" id="marvol">
-                    <div class="marvol-img">
-                        <img src="./images/img-2.png" alt="Proyecto Marvol" title="Proyecto Marvol">
-                    </div>
-                    <div class="marvol-container">
-                        <h3 class="marvol-title">MARVOL</h3>
-                        <p>En este proyecto, podrás encontrar distintos componentes y secciones de interés para todos
-                            los fanáticos de Marvol.</p>
-                        <button class="btn btn-transparent">Ver Código</button>
-                        <button class="btn btn-secondary">Ver Proyecto</button>
-                    </div>
-                    <div class="marvol-content-secondary"></div>
-                </div>
-                <div class="proyects-spotifu" id="spotifu">
-                    <div class="spotifu-img">
-                        <img src="./images/img-3.png" alt="Proyecto spotifu" title="Proyecto spotifu">
-                    </div>
-                    <div class="spotifu-content">
-                        <h4>Spotifu</h4>
-                        <p>Con este proyecto podrás desafiar tus habilidades como desarrollador Frontend, maquetando la
-                            interfaz de Spotifu, una de
-                            las apps más famosas de la industria musical.</p>
-                        <button class="btn btn-secondary">
-                            Ver Código
-                        </button>
+        <h3>Proyectos</h3>
 
-                        <button class="btn btn-primary">
-                            Ver Proyecto
-                        </button>
-                    </div>
-                    <div class="spotifu-content-primary"></div>
-
-                </div>
-
-            </div>
+        <div class="projects-menu">
+            <a href="" class="btn btn-primary">Niko</a>
+            <a href="" class="btn btn-transparent">Marvol</a>
+            <a href="" class="btn btn-transparent">Spotifu</a>
         </div>
+
+
+        <div class="project-container">
+            <div class="img">
+                <img src="./images/img-1.png" alt="">
+            </div>
+            <div class="content is-secondary">
+                <h1>NIKO</h1>
+                <p>Niko es una de las marcas y proveedores de equipamiento deportivo más reconocidas y valiosas en todo
+                    el mundo.
+                    Por ello este proyecto es dedicado a crear la interfaz de la pagina oficial de Niko, donde tenemos
+                    uno de los calzados
+                    más...</p>
+                <div class="project-buttons">
+                    <button class="btn btn-primary">Ver Proyecto</button>
+                    <button class="btn btn-transparent-bordered">Ver Código</button>
+                </div>
+            </div>
+            <div class="content-bg is-primary"></div>
+        </div>
+
+        <div class="project-container">
+            <div class="img">
+                <img src="./images/img-2.png" alt="">
+            </div>
+            <div class="content is-primary">
+                <h1>MARVOL</h1>
+                <p>En este proyecto, podrás encontrar distintos componentes y secciones de interés para todos los
+                    fanáticos de Marvol...</p>
+                <div class="project-buttons">
+                    <button class="btn btn-secondary">Ver Proyecto</button>
+                    <button class="btn btn-secondary-transparent ">Ver Código</buttonc>
+                </div>
+            </div>
+            <div class="content-bg is-secondary"></div>
+        </div>
+
+        <div class="project-container">
+            <div class="img">
+                <img src="./images/img-3.png" alt="">
+            </div>
+            <div class="content is-secondary">
+                <h1>Spotifu</h1>
+                <p>Con este proyecto podrás desafiar tus habilidades como desarrollador Frontend, maquetando la interfaz
+                    de Spotifu, una de
+                    las apps más famosas de la industria musical...</p>
+                <div class="project-buttons">
+                    <button class="btn btn-primary">Ver Proyecto</button>
+                    <button class="btn btn-transparent-bordered">Ver Código</button>
+                </div>
+            </div>
+            <div class="content-bg is-primary"></div>
+        </div>
+
+
+
+
     </div>
+
     <div class="testimonials">
         <div class="testimonials-wrapper">
             <h4>Testimonios</h4>
