--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
 
     <div class="testimonials">
         <div class="testimonials-wrapper">
-            <h4>Testimonios</h4>
+            <div class="testimonial-title">
+                <h4>Testimonios</h4>
+
+            </div>
             <div class="testimonials-container">
                 <!-- !aqui -->
 
