--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="./css/index.css">
     <title>Portafolio de Edwyn</title>
 </head>
+
 <header>
+
     <div class="wrapper">
         <div class="header-container">
             <i class="icon-menu"></i>
@@ -26,7 +28,33 @@
         </div>
         <button class="btn btn-primary">Currículum</button>
     </div>
+
 </header>
+<div class="mobile-menu hidden" id="mobile-menu">
+    <div class="logo-mobile-menu">
+        <img src="./images/logo_edwyn.png" alt="">
+    </div>
+    <div class="mobile-menu-content">
+        <a href="#main" class="mobileLink">
+            Hola
+        </a>
+        <a href="#projects" class="mobileLink">
+            Proyectos
+        </a>
+
+        <a href="#testimonials" class="mobileLink">
+            Testimonios
+        </a>
+        <a href="#contact" class="mobileLink">
+            Contacto
+        </a>
+
+    </div>
+    <div class="close-mobile-menu">
+        <i class="icon-cancel"></i>
+    </div>
+
+</div>
 
 <body>
     <div class="main" id="main">
@@ -276,6 +304,7 @@
 
 
     </footer>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
