--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <meta property="og:url" content="https://alfgow.github.io/portafolio_edwyn/" />
     <meta property="og:image"
         content="https://raw.githubusercontent.com/alfgow/portafolio_edwyn/master/images/projectScreen.jpg" />
-
+    <meta property="og:description"
+        content="Devloper que le encanta implementar diseños que inspiran y atraen a las personas." />
     <link rel="stylesheet" href="./css/index.css">
     <title>Portafolio de Edwyn</title>
 </head>
